--- a/examples/package.json
+++ b/examples/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "booking",
+  "name": "booking_client",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "booking": "file:../",
+    "booking_client": "file:../",
     "zod": "3.22.0"
   },
   "scripts": {
