--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booking",
+  "name": "booking_client",
   "version": "1.0.0",
   "description": "Partner Connect API Service ",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
     "api",
     "client"
   ],
-  "author": "LibLab",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "typescript": "5.3.3"
